--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.20",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-graphql": "^0.12.0",
@@ -17,14 +18,16 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
-    "scripts": {
-      "start": "node server/server.js",
-      "dev": "concurrently \"npm run server\" \"npm run client\"",
-      "server": "nodemon server/server.js --ignore client",
-      "client": "webpack serve --mode development --open",
-      "build": "webpack --mode production"
+  "scripts": {
+    "start": "concurrently \"node server/server.js\" \"react-scripts start\"",
+    "server": "node server/server.js",
+    "client": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -48,16 +51,11 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/preset-react": "^7.24.7",
-    "babel-loader": "^9.1.3",
     "concurrently": "^8.2.2",
     "css-loader": "^7.1.2",
-    "html-webpack-plugin": "^5.6.0",
     "nodemon": "^3.1.4",
     "postcss-loader": "^8.1.1",
     "style-loader": "^4.0.0",
-    "tailwindcss": "^3.4.10",
-    "webpack": "^5.93.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-middleware": "^7.4.1"
+    "tailwindcss": "^3.4.10"
   }
 }
