--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-graphql": "^0.12.0",
+    "firebase": "^10.13.0",
     "mongoose": "^8.5.3",
     "postcss": "^8.4.41",
     "react": "^18.3.1",
