--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "concurrently \"node server/server.js\" \"react-scripts start\"",
+    "start": "node server/server.js",
     "server": "node server/server.js",
     "client": "react-scripts start",
     "build": "react-scripts build",
