Add Firebase configuration to .env

--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
 REACT_APP_MONGO_URI=mongodb+srv://eliram9:pDS3olMEiwIe7aqU@blog.nd22d.mongodb.net/blog?retryWrites=true&w=majority&appName=blog
+
+REACT_APP_FIREBASE_API_KEY=AIzaSyCvSg4kheieteJ_6xZtcWzxAPa3dnZ7ZVo
+REACT_APP_FIREBASE_AUTH_DOMAIN=blogcreatorauth.firebaseapp.com
+REACT_APP_FIREBASE_PROJECT_ID=blogcreatorauth
+REACT_APP_FIREBASE_STORAGE_BUCKET=blogcreatorauth.appspot.com
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=642201450151
+REACT_APP_FIREBASE_APP_ID=1:642201450151:web:9f1d3a59f37c3b4e2acd82
+REACT_APP_FIREBASE_MEASUREMENT_ID=G-J1W3BLE3V3
