Update GraphQL endpoint configuration

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+REACT_APP_GRAPHQL_URL=your_graphql_url_here
+
 REACT_APP_MONGO_URI=your_mongodb_uri_here
 REACT_APP_FIREBASE_API_KEY=your_firebase_api_key_here
 REACT_APP_FIREBASE_AUTH_DOMAIN=your_firebase_auth_domain_here
